2009-10-25  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.6

	* ioutils.c, parse.cc: Added #include <cstdio>.

2009-10-24  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0.5

2009-10-23  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* synchronizer.cc (Synchronizer::nextCommunication): Handle
	tight loops (maxBuffered == 0) of spike events.

	* temporal.cc (TemporalNegotiator::combineParameters): Correctly
	take MAX_BUFFERED_NO_VALUE arguments into consideration.

	* music/subconnector.hh, connector.cc, runtime.cc,
	subconnector.cc: Use COMM_WORLD ranks for the pair-wise
	communication schedule in Runtime::buildSchedule.

	* music/port.hh, port.cc (EventOutputPort::EventOutputPort,
	EventInputPort::EventInputPort): Moved from header file to
	port.cc.

	* temporal.cc (TemporalNegotiator::distributeNegotiationData): Use
	type ClockState for accLatency.

2009-10-20  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* connector.hh, event_router.hh, interval.hh, port.hh,
	connector.cc, event_router.cc, port.cc: New version of event
	routing interval joining code which handles interval sequences for
	different targets separately.

2009-10-19  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* event_router.cc (EventRouter::buildTable): Added debugging
	printout of routing table size (when #define MUSIC_DEBUG is
	uncommented).

	* music/interval_tree.hh (IntervalTree<PointType)
	(DataType>::size): New method (for debugging purposes).

2009-10-12  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.cc (Setup::Setup): Report an error if MPI::Init has been
	called.

2009-10-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/connector.hh, music/event_router.hh, music/port.hh,
	connector.cc, event_router.cc, port.cc: Join event routing
	intervals over holes in the routing map.  This increases
	efficiency of event routing but has the consequence that
	non-mapped indices may now be erroneously routed.

2009-10-04  Mikael Djurfeldt  <mikael@djurfeldt.com>
